tests/type_errors/hasmethod_propagation.nos
# expect_error: no method toUpper
# HasMethod constraint should propagate: calling .sort() constrains the type,
# then calling .toUpper() on the list result should fail
f(xs) = xs.sort().toUpper()
main() = f([1, 2, 3])
